# format-checkers

./: app.py  docker-compose.yaml  proxy.Dockerfile  proxy.py  pyproject.toml
checkers/: apache_avro_checker.py  checker.py  json_checker.py  message_pack_checker.py  pickle_checker.py  xml_checker.py  yaml_checker.py
tests/: avro.schema  avro_binary  json_raw
